--- a/page-extra/page-hasil.html
+++ b/page-extra/page-hasil.html
@@ -1,198 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vision banding</title>
-    <link rel="stylesheet" href="../assets/css/style-bandingkan.css" />
-    <link rel="stylesheet" href="../assets/css/style-hasil.css" />
-    <link rel="stylesheet" href="../assets/css/navbar.css" />
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    <link rel="stylesheet" href="../assets/css/footer.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-  </head>
-  <style>
-    @media only screen and (max-width: 480px) {
-      .nav {
-        position: fixed;
-        z-index: 999;
-        width: 100%; /* Adjust width as needed */
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vision banding</title>
+  <link rel="stylesheet" href="../assets/css/style-bandingkan.css" />
+  <link rel="stylesheet" href="../assets/css/style-hasil.css" />
+  <link rel="stylesheet" href="../assets/css/navbar.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link rel="stylesheet" href="../assets/css/footer.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-      .nav-button {
-        background-color: #fff;
-        color: black;
-        border-radius: 50%;
-        width: 10vw; /* Adjust width based on viewport */
-        height: 10vw; /* Maintain aspect ratio */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        font-size: 2vw; /* Adjust font size based on viewport */
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-        position: absolute;
-        top: -60px;
-        left: 10px;
-        z-index: 1000;
-      }
-
-      .nav-content {
-        position: absolute;
-        top: -6vw; /* Adjust based on nav-button height */
-        left: 15px;
-        right: 0;
-        width: 80% !important;
-        display: flex;
-        flex-direction: column;
-        background-color: #fff;
-        border-radius: 0 0 10px 10px !important;
-        transform: scaleY(0);
-        transform-origin: top;
-        transition: transform 0.3s ease-in-out;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-        border: 1px solid black;
-      }
-
-      .nav-content a {
-        color: black;
-        text-decoration: none;
-      }
-
-      .nav-content li {
-        list-style-type: none;
-        font-weight: bold;
-      }
-
-      .nav-content .active {
-        border-bottom: 2px solid orange;
-      }
-
-      .nav-content.open {
-        transform: scaleY(1);
-      }
-
-      #content {
-        margin-top: 20%;
-      }
+</head>
+<style>
+  @media only screen and (max-width: 480px) {
+    .nav {
+      position: fixed;
+      z-index: 999;
+      width: 100%;
+      /* Adjust width as needed */
     }
-  </style>
-  <body class="overflow-x-hidden">
-    <section-isi-banding>
-      <!-- Navbar banding start -->
-      <nav
-        class="navbar nav text-dark p-2 pt-5"
-        data-aos="zoom-in-up"
-        data-aos-duration="1000"
-      >
-        <div class="nav-button" id="navButton">☰</div>
-        <ul
-          class="nav-content d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5"
-        >
-          <li
-            class="nav-item active"
-            data-aos="zoom-in-right"
-            data-aos-duration="1000"
-          >
+
+    .nav-button {
+      background-color: #fff;
+      color: black;
+      border-radius: 50%;
+      width: 10vw;
+      /* Adjust width based on viewport */
+      height: 10vw;
+      /* Maintain aspect ratio */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      font-size: 2vw;
+      /* Adjust font size based on viewport */
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      position: absolute;
+      top: -60px;
+      left: 10px;
+      z-index: 1000;
+    }
+
+    .nav-content {
+      position: absolute;
+      top: -6vw;
+      /* Adjust based on nav-button height */
+      left: 15px;
+      right: 0;
+      width: 80% !important;
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+      border-radius: 0 0 10px 10px !important;
+      transform: scaleY(0);
+      transform-origin: top;
+      transition: transform 0.3s ease-in-out;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      border: 1px solid black;
+    }
+
+    .nav-content a {
+      color: black;
+      text-decoration: none;
+    }
+
+    .nav-content li {
+      list-style-type: none;
+      font-weight: bold;
+    }
+
+    .nav-content .active {
+      border-bottom: 2px solid orange;
+    }
+
+    .nav-content.open {
+      transform: scaleY(1);
+    }
+
+    #content {
+      margin-top: 20%;
+    }
+  }
+</style>
+
+<body class="overflow-x-hidden">
+  <section-isi-banding>
+    <!-- Navbar banding start -->
+    <nav class="navbar nav text-dark p-2 pt-5" data-aos="zoom-in-up" data-aos-duration="1000">
+      <div class="nav-button" id="navButton">☰</div>
+      <ul
+        class="nav-content d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5">
+        <li class="nav-item active" data-aos="zoom-in-right" data-aos-duration="1000">
           <a href="../index.html">Beranda</a>
-          </li>
-          <li class="nav-item" data-aos="zoom-in" data-aos-duration="1000">
-            <a href="page-bandingkan.html">Bandingkan</a>
-          </li>
-          <li class="nav-item" data-aos="zoom-in-left" data-aos-duration="1000">
-            <a href="page-panduan.html">Panduan</a>
-          </li>
-          <i class="fa-solid fa-magnifying-glasswed"></i>
-        </ul>
-      </nav>
-      <!-- Navbar banding end -->
+        </li>
+        <li class="nav-item" data-aos="zoom-in" data-aos-duration="1000">
+          <a href="page-bandingkan.html">Bandingkan</a>
+        </li>
+        <li class="nav-item" data-aos="zoom-in-left" data-aos-duration="1000">
+          <a href="page-panduan.html">Panduan</a>
+        </li>
+        <i class="fa-solid fa-magnifying-glasswed"></i>
+      </ul>
+    </nav>
+    <!-- Navbar banding end -->
 
-      <!-- content banding start -->
-      <div id="content">
-        <!-- data informasi -->
-      </div>
-      <!-- content banding end -->
-
-      <!-- footer start -->
-      <div id="footer" data-aos="fade-up" data-aos-duration="1500">
-        <div class="row ps-5">
-            <div class="col" data-aos="fade-right" data-aos-duration="1200">
-                <ul class="fw-light">
-                    <li class="list-group-item fw-bold fst-italic" id="judulKiriFooter">Explore</li>
-                    <li class="p-1 list-group-item">Beranda</li>
-                    <li class="p-1 list-group-item">VR</li>
-                    <li class="p-1 list-group-item">Bandingkan</li>
-                    <li class="p-1 list-group-item">Panduan</li>
-                </ul>
-            </div>
-
-            <div class="col" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
-                <ul>
-                    <li class="list-group-item fw-bold" id="judulTengahFooter">Vision</li>
-                    <li class="p-1 list-group-item" id="wandiPengertianFooter">
-                        Virtual Reality atau biasa kita sebut VR adalah suatu teknologi yang
-                        memungkinkan manusia untuk melihat dunia yang berbeda.
-                    </li>
-                    <li class="list-group-item position-relative">
-                        <div class="d-flex fbutton">
-                            <input id="wandiInputFooter" type="text" placeholder="Masukan Pesan"
-                                class="form-control rounded-3 animate-input" />
-                            <button class="btn rounded-3 animate-btn" id="wandiButtonFooter" data-aos="fade-up"
-                                data-aos-duration="1500" data-aos-delay="500">
-                                Kirim
-                            </button>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col gambar" data-aos="fade-left" data-aos-duration="1200" data-aos-delay="200">
-                <img src="../assets/img/Rectangle 84.png" id="wandiGambarFooter" class="animate-img" />
-            </div>
-
-            <div class="d-flex justify-content-center">
-                <hr style="width: 95%;" data-aos="fade-up" data-aos-duration="1000" />
-            </div>
-
-            <div class="container">
-                <div class="row bottom">
-                    <div class="col-sm-5 col-md-5 ms-5 fw-medium cp">
-                        <p class="copyright">© Copyright 2024 by The Visionaries</p>
-                    </div>
-                    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 text-end social-icons">
-                        <img src="../assets/img/instagram.svg" class="animate-icon">
-                        <img src="../assets/img/facebook.svg" class="mx-2 animate-icon">
-                        <img src="../assets/img/linkedin.svg" class="me-2 animate-icon">
-                        <img src="../assets/img/twitter.svg" class="animate-icon">
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- content banding start -->
+    <div id="content">
+      <!-- data informasi -->
     </div>
-      <!-- footer end -->
-    </section-isi-banding>
+    <!-- content banding end -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script src="../assets/js/script-spec.js"></script>
-    <script src="../assets/js/script-hasil.js"></script>
-    <script src="../assets/js/img-slide.js"></script>
-    <script>
-      localStorage.removeItem("key");
-    </script>
-  </body>
+    <!-- footer start -->
+    <div id="footer" data-aos="fade-up" data-aos-duration="1500">
+      <div class="row ps-5">
+        <div class="col" data-aos="fade-right" data-aos-duration="1200">
+          <ul class="fw-light">
+            <li class="list-group-item fw-bold fst-italic" id="judulKiriFooter">Explore</li>
+            <li class="p-1 list-group-item">Beranda</li>
+            <li class="p-1 list-group-item">VR</li>
+            <li class="p-1 list-group-item">Bandingkan</li>
+            <li class="p-1 list-group-item">Panduan</li>
+          </ul>
+        </div>
+
+        <div class="col" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
+          <ul>
+            <li class="list-group-item fw-bold" id="judulTengahFooter">Vision</li>
+            <li class="p-1 list-group-item" id="wandiPengertianFooter">
+              Virtual Reality atau biasa kita sebut VR adalah suatu teknologi yang
+              memungkinkan manusia untuk melihat dunia yang berbeda.
+            </li>
+            <li class="list-group-item position-relative">
+              <div class="d-flex fbutton">
+                <input id="wandiInputFooter" type="text" placeholder="Masukan Pesan"
+                  class="form-control rounded-3 animate-input" />
+                <button class="btn rounded-3 animate-btn" id="wandiButtonFooter" data-aos="fade-up"
+                  data-aos-duration="1500" data-aos-delay="500">
+                  Kirim
+                </button>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col gambar" data-aos="fade-left" data-aos-duration="1200" data-aos-delay="200">
+          <img src="../assets/img/Rectangle 84.png" id="wandiGambarFooter" class="animate-img" />
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <hr style="width: 95%;" data-aos="fade-up" data-aos-duration="1000" />
+        </div>
+
+        <div class="container">
+          <div class="row bottom">
+            <div class="col-sm-5 col-md-5 ms-5 fw-medium cp">
+              <p class="copyright">© Copyright 2024 by The Visionaries</p>
+            </div>
+            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 text-end social-icons">
+              <img src="../assets/img/instagram.svg" class="animate-icon">
+              <img src="../assets/img/facebook.svg" class="mx-2 animate-icon">
+              <img src="../assets/img/linkedin.svg" class="me-2 animate-icon">
+              <img src="../assets/img/twitter.svg" class="animate-icon">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- footer end -->
+  </section-isi-banding>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="../assets/js/script-spec.js"></script>
+  <script src="../assets/js/script-hasil.js"></script>
+  <script src="../assets/js/img-slide.js"></script>
+  <script>
+    localStorage.removeItem("key");
+  </script>
+</body>
+
 </html>
