--- a/page-extra/page-search-banding.html
+++ b/page-extra/page-search-banding.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="../assets/css/footer.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Vision Banding</title>
 </head>
 </head>
@@ -251,22 +250,22 @@
   }
 </style>
 
-<body>
+<body class="overflow-x-hidden">
 
 
 
   <!-- Navbar -->
-  <nav class="navbar nav text-dark p-2 pt-5" data-aos="zoom-in-up" data-aos-duration="1000">
+  <nav class="navbar nav text-dark p-2 pt-5">
     <div class="nav-button" id="navButton">☰</div>
     <ul
       class="nav-content d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5">
-      <li class="nav-item active" data-aos="zoom-in-right" data-aos-duration="1000">
+      <li class="nav-item active">
         <a href="../index.html">Beranda</a>
       </li>
-      <li class="nav-item" data-aos="zoom-in" data-aos-duration="1000">
+      <li class="nav-item">
         <a href="page-bandingkan.html">Bandingkan</a>
       </li>
-      <li class="nav-item" data-aos="zoom-in-left" data-aos-duration="1000">
+      <li class="nav-item">
         <a href="page-panduan.html">Panduan</a>
       </li>
       <i class="fa-solid fa-magnifying-glasswed"></i>
@@ -281,9 +280,9 @@
   <!-- isikonten -->
 
   <!-- footer -->
-  <div id="footer" data-aos="fade-up" data-aos-duration="1500">
+  <div id="footer">
     <div class="row ps-5">
-      <div class="col" data-aos="fade-right" data-aos-duration="1200">
+      <div class="col">
         <ul class="fw-light">
           <li class="list-group-item fw-bold fst-italic" id="judulKiriFooter">Explore</li>
           <li class="p-1 list-group-item">Beranda</li>
