--- a/index.html
+++ b/index.html
@@ -503,9 +503,9 @@
     <!-- End Halaman Banding -->
 
     <!-- Start Halaman Footer -->
-    <div id="footer" data-aos="fade-up" data-aos-duration="1500">
+    <div id="footer" data-aos="fade-up" data-aos-duration="1000">
         <div class="row ps-5">
-            <div class="col" data-aos="fade-right" data-aos-duration="1200">
+            <div class="col">
                 <ul class="fw-light">
                     <li class="list-group-item fw-bold fst-italic" id="judulKiriFooter">Explore</li>
                     <li class="p-1 list-group-item">Beranda</li>
@@ -515,7 +515,7 @@
                 </ul>
             </div>
 
-            <div class="col" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
+            <div class="col">
                 <ul>
                     <li class="list-group-item fw-bold" id="judulTengahFooter">Vision</li>
                     <li class="p-1 list-group-item" id="wandiPengertianFooter">
@@ -526,8 +526,7 @@
                         <div class="d-flex fbutton">
                             <input id="wandiInputFooter" type="text" placeholder="Masukan Pesan"
                                 class="form-control rounded-3 animate-input" />
-                            <button class="btn rounded-3 animate-btn" id="wandiButtonFooter" data-aos="fade-up"
-                                data-aos-duration="1500" data-aos-delay="500">
+                            <button class="btn rounded-3 animate-btn" id="wandiButtonFooter">
                                 Kirim
                             </button>
                         </div>
@@ -535,12 +534,12 @@
                 </ul>
             </div>
 
-            <div class="col gambar" data-aos="fade-left" data-aos-duration="1200" data-aos-delay="200">
+            <div class="col gambar">
                 <img src="assets/img/Rectangle 84.png" id="wandiGambarFooter" class="animate-img" />
             </div>
 
             <div class="d-flex justify-content-center">
-                <hr style="width: 95%;" data-aos="fade-up" data-aos-duration="1000" />
+                <hr style="width: 95%;"/>
             </div>
 
             <div class="container">
