--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -198,9 +198,9 @@
     <!-- Content - Bandingkan end -->
 
     <!-- Footer - Spec start -->
-    <div id="footer" data-aos="fade-up" data-aos-duration="1500">
+    <div id="footer" data-aos="fade-up" data-aos-duration="1000">
       <div class="row ps-5">
-        <div class="col" data-aos="fade-right" data-aos-duration="1200">
+        <div class="col">
           <ul class="fw-light">
             <li class="list-group-item fw-bold fst-italic" id="judulKiriFooter">Explore</li>
             <li class="p-1 list-group-item">Beranda</li>
@@ -210,7 +210,7 @@
           </ul>
         </div>
 
-        <div class="col" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
+        <div class="col">
           <ul>
             <li class="list-group-item fw-bold" id="judulTengahFooter">Vision</li>
             <li class="p-1 list-group-item" id="wandiPengertianFooter">
@@ -221,8 +221,7 @@
               <div class="d-flex fbutton">
                 <input id="wandiInputFooter" type="text" placeholder="Masukan Pesan"
                   class="form-control rounded-3 animate-input" />
-                <button class="btn rounded-3 animate-btn" id="wandiButtonFooter" data-aos="fade-up"
-                  data-aos-duration="1500" data-aos-delay="500">
+                <button class="btn rounded-3 animate-btn" id="wandiButtonFooter">
                   Kirim
                 </button>
               </div>
@@ -230,12 +229,12 @@
           </ul>
         </div>
 
-        <div class="col gambar" data-aos="fade-left" data-aos-duration="1200" data-aos-delay="200">
+        <div class="col gambar">
           <img src="../assets/img/Rectangle 84.png" id="wandiGambarFooter" class="animate-img" />
         </div>
 
         <div class="d-flex justify-content-center">
-          <hr style="width: 95%;" data-aos="fade-up" data-aos-duration="1000" />
+          <hr style="width: 95%;"/>
         </div>
 
         <div class="container">
