--- a/page-extra/page-panduan.html
+++ b/page-extra/page-panduan.html
@@ -281,9 +281,9 @@
 
 
     <!-- Footer - panduan start -->
-    <div id="footer" data-aos="fade-up" data-aos-duration="1500">
+    <div id="footer" data-aos="fade-up" data-aos-duration="1000">
       <div class="row ps-5">
-        <div class="col" data-aos="fade-right" data-aos-duration="1200">
+        <div class="col">
           <ul class="fw-light">
             <li class="list-group-item fw-bold fst-italic" id="judulKiriFooter">Explore</li>
             <li class="p-1 list-group-item">Beranda</li>
@@ -293,7 +293,7 @@
           </ul>
         </div>
 
-        <div class="col" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
+        <div class="col">
           <ul>
             <li class="list-group-item fw-bold" id="judulTengahFooter">Vision</li>
             <li class="p-1 list-group-item" id="wandiPengertianFooter">
@@ -304,8 +304,7 @@
               <div class="d-flex fbutton">
                 <input id="wandiInputFooter" type="text" placeholder="Masukan Pesan"
                   class="form-control rounded-3 animate-input" />
-                <button class="btn rounded-3 animate-btn" id="wandiButtonFooter" data-aos="fade-up"
-                  data-aos-duration="1500" data-aos-delay="500">
+                <button class="btn rounded-3 animate-btn" id="wandiButtonFooter">
                   Kirim
                 </button>
               </div>
@@ -313,12 +312,12 @@
           </ul>
         </div>
 
-        <div class="col gambar" data-aos="fade-left" data-aos-duration="1200" data-aos-delay="200">
+        <div class="col gambar">
           <img src="../assets/img/Rectangle 84.png" id="wandiGambarFooter" class="animate-img" />
         </div>
 
         <div class="d-flex justify-content-center">
-          <hr style="width: 95%;" data-aos="fade-up" data-aos-duration="1000" />
+          <hr style="width: 95%;"/>
         </div>
 
         <div class="container">
